# doot

./: README.md  docker-compose.yml  postgres.env
.github/workflows/: test.frontend.yml
backend/: .dockerignore  Dockerfile
backend/doot/: Cargo.toml
backend/doot/migrations/2021-11-12-171348_create_tasks/: up.sql
backend/doot/src/: db.rs  endpoints.rs  main.rs  models.rs  schema.rs
frontend/: .eslintrc.js  Dockerfile  README.md  jest.config.js  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.ts  vuex.d.ts
frontend/src/components/: Editor.vue  Task.vue
frontend/src/store/: index.ts
frontend/tests/unit/: editor.spec.ts  helpers.ts  task.spec.ts  types.ts
