[package]
name = "doot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
http-types = "2.12.0"
serde = "1.0.130"
tide = "0.16.0"
tokio = { version = "1.13.0", features = ["full"] }
